add new website from server na

--- a/xem-phim-moi/nhung-ga-trai-hu-choi-hay-bi-xoi/index.html
+++ b/xem-phim-moi/nhung-ga-trai-hu-choi-hay-bi-xoi/index.html
@@ -1199,7 +1199,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             10
+             11
             </dd>
             <br/>
            </dl>
@@ -1789,62 +1789,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/day-la-xac-song-a-phan-2" title="Đây là xác sống à? (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/the-gioi-nay-khong-ai-bang-em" title="Thế Giới Này Không Ai Bằng Em">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/day-la-xac-song-a-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-gioi-nay-khong-ai-bang-em-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đây là xác sống à? (Phần 2)
+             Thế Giới Này Không Ai Bằng Em
             </span>
             <span class="list-top-movie-item-en">
-             Is This a Zombie? (Season 2)
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ung-dung-tu-than" title="Ứng Dụng Tử Thần">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ung-dung-tu-than-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Ứng Dụng Tử Thần
-            </span>
-            <span class="list-top-movie-item-en">
-             Countdown
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tay-choi-ve-vuon" title="Tay Chơi Về Vườn">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tay-choi-ve-vuon-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tay Chơi Về Vườn
-            </span>
-            <span class="list-top-movie-item-en">
-             Revanche
+             She Is The One (Phát Song Song)
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1855,18 +1811,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/siren" title="Siren">
+          <a class="list-top-movie-link" href="/phim-moi/hanh-vi-bao-nguoc" title="Hành vi bạo ngược">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/siren-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hanh-vi-bao-nguoc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Siren
+             Hành vi bạo ngược
             </span>
             <span class="list-top-movie-item-en">
-             Siren
+             The Violence Action
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1877,21 +1833,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/quy-ba-mary-shepherd" title="Quý Bà Mary Shepherd">
+          <a class="list-top-movie-link" href="/phim-moi/vong-vay-ca-map" title="Vòng Vây Cá Mập">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quy-ba-mary-shepherd-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vong-vay-ca-map-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Quý Bà Mary Shepherd
+             Vòng Vây Cá Mập
             </span>
             <span class="list-top-movie-item-en">
-             The Lady in the Van
+             No Way Up
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/lat-mat-6-tam-ve-dinh-menh" title="Lật Mặt 6: Tấm Vé Định Mệnh">
+           <span class="status">
+            HD Việt Nam
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lat-mat-6-tam-ve-dinh-menh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Lật Mặt 6: Tấm Vé Định Mệnh
+            </span>
+            <span class="list-top-movie-item-en">
+             Lật Mặt 6: Tấm Vé Định Mệnh
+            </span>
+            <span class="list-top-movie-item-view">
+             8 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ho-nhan-ban-tyrone" title="Họ nhân bản Tyrone">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ho-nhan-ban-tyrone-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Họ nhân bản Tyrone
+            </span>
+            <span class="list-top-movie-item-en">
+             They Cloned Tyrone
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
